--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack": "^5.91.0"
   },
   "devDependencies": {
+    "css-loader": "^7.1.1",
     "cssloader": "^1.1.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
